--- a/HCode/curso-javascript-projeto-usuarios/index.html
+++ b/HCode/curso-javascript-projeto-usuarios/index.html
@@ -204,7 +204,7 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputName">Nome</label>
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name">
+                  <input type="text" class="form-control" id="exampleInputName" required placeholder="Digite o nome do usuário" name="name">
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
@@ -472,11 +472,11 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail">E-mail</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Digite o e-mail" name="email">
+                  <input type="email" class="form-control" id="exampleInputEmail1" required placeholder="Digite o e-mail" name="email">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Crie uma senha" name="password">
+                  <input type="password" class="form-control" id="exampleInputPassword1" required placeholder="Crie uma senha" name="password">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Foto</label>
@@ -514,6 +514,7 @@
   </footer>
 
 </div>
+<script src = "classes/Utils.js"></script>
 <script src = "models/User.js"></script>
 <script src = "controlers/userControler.js"></script>
 <script src = "index.js"></script>
